--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta content="yes" name="apple-mobile-web-app-capable"> <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;">
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,6 +25,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+
+
     <title>React App</title>
   </head>
   <body>
@@ -40,4 +44,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    // const keyboard = new aKeyboard.mobileKeyboard({
+    //         el: '#main',
+    //         style: {},
+    //         fixedBottomCenter: true
+    //     })
+  </script>
 </html>
